# unit_devlab_pico

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
devlab/: __init__.py  cli.py  errors.py  platforms.py  project.py  toolchain.py
docs/: install-cmake.md  windows-ghdl-support.md
picodev/: __init__.py  cli.py  errors.py  platforms.py  project.py  toolchain.py
tests/: test_module_entrypoint.py  test_project.py  test_toolchain.py
