[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picodev"
version = "0.1.10"
description = "Raspberry Pi Pico development helper for installing Pico SDK and ARM GCC toolchain."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mrju10", email = "name@email.com" }
]
keywords = ["pico", "raspberry-pi-pico", "pico-sdk", "arm-gcc", "picodev", "rp2040"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
  "certifi>=2024.7.4",
  "pyocd>=0.44.0,<0.45",
  "tomli>=2.0.1; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/UNIT-Electronics-Labs/unit_devlab_pico"
Source = "https://github.com/UNIT-Electronics-Labs/unit_devlab_pico"
Issues = "https://github.com/UNIT-Electronics-Labs/unit_devlab_pico/issues"

[project.scripts]
picodev = "picodev.cli:main"

[tool.setuptools.packages.find]
include = ["picodev*"]
